Corrijindo funcao search_incorporate que falta o search api

--- a/construindo_langrap.ipynb
+++ b/construindo_langrap.ipynb
@@ -4351,41 +4351,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:langchain_community.utils.user_agent:USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from funcoes_auxiliares import condicional_edges\n",
+    "from langchain_core.messages import HumanMessage, AIMessage\n",
+    "from langchain_core.chat_history import BaseChatMessageHistory\n",
+    "from funcoes_auxiliares import InMemoryHistory\n",
+    "from chat_bots import chat_bot, chat_summarize_messages\n",
+    "import os\n",
+    "from groq import GroqError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_by_session_id(session_id: str) -> BaseChatMessageHistory:\n",
+    "    if session_id not in store:\n",
+    "        store[session_id] = InMemoryHistory()\n",
+    "\n",
+    "    if store[session_id].messages:\n",
+    "        for mes in store[session_id].messages[-2:]:\n",
+    "            if isinstance(mes, HumanMessage):\n",
+    "                if \"\\n%%%\\n\" in mes.content:\n",
+    "                    store[session_id].messages[\n",
+    "                        store[session_id].messages.index(mes)\n",
+    "                    ] = HumanMessage(\n",
+    "                        content=mes.content.split(\"\\n%%%\\n\")[0]  # type: ignore\n",
+    "                    )  # type: ignore\n",
+    "            if isinstance(mes, AIMessage):\n",
+    "                store[session_id].messages[store[session_id].messages.index(mes)] = (\n",
+    "                    AIMessage(content=chat_summarize_messages(mes.content, groq_api))  # type: ignore\n",
+    "                )\n",
+    "\n",
+    "    # Removendo as duas primeiras mensagens\n",
+    "    tamanho_memoria = sum([len(mes.content) for mes in store[session_id].messages])\n",
+    "    if tamanho_memoria > 6500:\n",
+    "        del store[session_id].messages[:2]\n",
+    "    return store[session_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chat_reposta_condicional(\n",
+    "    enter, memory, config_memory, api_groq, api_searchapi\n",
+    ") -> str:\n",
+    "\n",
+    "    input_message = {\"messages\": [{\"content\": enter}]}\n",
+    "\n",
+    "    resposta_incorporada = condicional_edges(input_message, api_groq, api_searchapi)\n",
+    "    try:\n",
+    "        if isinstance(resposta_incorporada, dict):\n",
+    "            resposta_incorporada = resposta_incorporada[\"messages\"][0][\"content\"]\n",
+    "    except KeyError:\n",
+    "        resposta_incorporada = resposta_incorporada[\"messages\"][0][\"content\"]\n",
+    "\n",
+    "    resposta_concluida = chat_bot(\n",
+    "        mensagem=resposta_incorporada,\n",
+    "        memory=memory,\n",
+    "        config=config_memory,\n",
+    "        api_secret=api_groq,\n",
+    "    )\n",
+    "\n",
+    "    return resposta_concluida[\"messages\"][0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = {\"configurable\": {\"session_id\": \"foo\"}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groq_api = \"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\"\n",
+    "searchapi_api = os.getenv(\"SEARCHAPI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'messages': [{'content': 'No'}]}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"Bom dia\"\n",
+    "response = chat_reposta_condicional(\n",
+    "            prompt, get_by_session_id, config, groq_api, searchapi_api\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'url': 'https://www.rottentomatoes.com/browse/movies_at_home/affiliates:netflix~genres:comedy~sort:popular',\n",
-       "  'content': 'Rotten Tomatoes, home of the Tomatometer, is the most trusted measurement of quality for Movies & TV. The definitive site for Reviews, Trailers, Showtimes, and Tickets'},\n",
-       " {'url': 'https://www.rottentomatoes.com/browse/movies_in_theaters/genres:comedy~sort:popular',\n",
-       "  'content': 'Rotten Tomatoes, home of the Tomatometer, is the most trusted measurement of quality for Movies & TV. The definitive site for Reviews, Trailers, Showtimes, and Tickets'},\n",
-       " {'url': 'https://www.rottentomatoes.com/browse/movies_at_home/affiliates:prime-video~genres:comedy~sort:popular',\n",
-       "  'content': 'Rotten Tomatoes, home of the Tomatometer, is the most trusted measurement of quality for Movies & TV. The definitive site for Reviews, Trailers, Showtimes, and Tickets'},\n",
-       " {'url': 'https://www.rottentomatoes.com/browse/movies_at_home/affiliates:netflix~genres:comedy~ratings:pg_13~sort:popular',\n",
-       "  'content': 'Rotten Tomatoes, home of the Tomatometer, is the most trusted measurement of quality for Movies & TV. The definitive site for Reviews, Trailers, Showtimes, and Tickets'},\n",
-       " {'url': 'https://www.rottentomatoes.com/m/red_one',\n",
-       "  'content': 'Terms and Policies, and to receive email from Rotten Tomatoes and to receive email from the Fandango Media Brands. Terms and Policies , and to receive email from Rotten Tomatoes. Sign me up No thanksBy clicking \"Sign Me Up,\" you are agreeing to receive occasional emails and communications from Fandango Media (Fandango, Vudu, and Rotten Tomatoes) and consenting to Fandango\\'s Privacy Policy and Terms and Policies. 100% From: Season 3 Play trailer 3:03  Red One PG-13 In Theaters Fri Nov 15 2h 2m Holiday Action Adventure Comedy Play Trailer Watchlist Cast & Crew Reviews Videos Photos More Like This Media Info View All (21) Critics Reviews View All videos View All Movies in Theaters View More'}]"
+       "'Bom dia! Como posso ajudar você com filmes ou séries hoje?'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pesquisa"
+    "response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "links_results = ['https://movies.disney.com/disney-princess-enchanted-tales-follow-your-dreams']"
+    "from funcoes_auxiliares import search_and_incorporateta_LinkupClient"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: GET https://api.linkup.so/v1/search?q=Filme%20de%20comedia&depth=standard&outputType=searchResults&includeImages=false \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.assinar-oi-fibra.com.br/blog/quais-os-20-melhores-filmes-de-comedia-segundo-o-imdb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching pages: 100%|##########| 1/1 [00:00<00:00,  2.90it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://pixelnerd.com.br/20-filmes-de-comedia-para-assistir-em-2023/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching pages: 100%|##########| 1/1 [00:00<00:00,  1.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://cidesp.com.br/artigo/melhor-filme-de-comedia\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching pages: 100%|##########| 1/1 [00:38<00:00, 38.78s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.otempo.com.br/entretenimento/filmes-e-series/os-melhores-filmes-de-comedia-de-2023-1.2875096\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching pages: 100%|##########| 1/1 [00:00<00:00,  1.52it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://correiobaiano.com.br/2024/12/21/15-comedias-de-2024-que-prometem-muitas-risadas/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching pages: 100%|##########| 1/1 [00:00<00:00,  1.36it/s]\n",
+      "INFO:httpx:HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'messages': [{'content': 'Filme de comedia\\n%%%\\nNicolas Cage interpreta uma versão fictícia de si mesmo, enfrentando problemas na carreira e na vida financeira. Ele aceita uma oferta milionária para participar da festa de aniversário de um super fã, que na verdade é um perigoso criminoso. Cage se vê envolvido em uma trama de espionagem e ação, tendo que usar suas habilidades de ator e seus personagens mais icônicos para se salvar e salvar o mundo.\\n\\nTico e Teco são dois esquilos que vivem aventuras incríveis como detetives da agência Defensores da Lei. Eles contam com a ajuda de seus amigos Geninha, uma ratinha mecânica, Monte, um rato aventureiro, e Bzum, uma mosca voadora. Juntos, eles enfrentam os mais diversos vilões, como o gato Manda-Chuva, o cientista maluco Norton Nimnul e o rato Fat Cat.\\n\\nAdam Sandler é um detetive americano que viaja para Páris para investigar um caso de roubo de joias. Ele se envolve em uma série de confusões e perseguições pela cidade, enquanto tenta encontrar o culpado e se apaixona por uma bela francesa.\\n\\nMafia Mamma é uma comédia de ação sobre uma dona de casa que descobre que seu marido é o chefe de uma organização criminosa. Quando ele é assassinado por um rival, ela assume o comando da máfia e tenta equilibrar sua vida familiar com seus negócios ilícitos.\\n\\nAbby Abernathy é uma caloura na universidade que quer deixar seu passado conturbado para trás. Mas sua vida muda quando ela conhece Travis Maddox, um bad boy lutador de MMA que a desafia a uma aposta: se ele perder sua próxima luta, ficará um mês sem sexo; se ele ganhar, ela terá que morar com ele por um mês.\\n\\nMaddie está prestes a perder sua casa de infância por causa de dívidas. Desesperada por um emprego, ela aceita a proposta de um casal rico que quer que ela namore seu filho Percy, um jovem tímido e nerd que precisa se soltar antes de ir para a faculdade.\\n\\nEm uma versão sombria e violenta do Bosque dos Cem Acres, o ursinho Pooh se torna um assassino implacável que mata seus antigos amigos para roubar seu mel. Mas quando ele enfrenta o seu maior desafio, o detetive Cristóvão, ele terá que escolher entre a sua sede de sangue e a sua amizade perdida.\\n\\nDrea Torres é a garota mais popular de uma escola de elite, mas perde seu status quando é traída por seu namorado e sua melhor amiga. Ela então faz um pacto com a nova aluna, Ruthie, que tem um talento especial para se vingar dos inimigos. Juntas, elas vão enfrentar os valentões, as patricinhas e os falsos amigos que cruzarem seus caminhos.'}]}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search_and_incorporateta_LinkupClient(\"Filme de comedia\", searchapi_api, groq_api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
